This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

23-Aug-2004 (Lars Duening)  (3.3.588)
  - (array.c, pkg-mccp.c) Removed compiler warnings (thanks, Andre).

22-Aug-2004 (Lars Duening)  (3.3.587)
  - (interpret.c) Calls from destructed objects to other objects
       (including simul-efun calls) now elicit a warning (Bug #0000113).
  - (configure, config.h, mregex, pkg-pcre, main.c) The driver now tries
       to use the system's PCRE library if available, while offering an
       override to use the builtin package regardless.

21-Aug-2004 (Lars Duening)  (3.3.586)
  - (interpret.c) If a lambda was executed inside a catch() and threw an
       error, the error routines didn't clean up the protective reference
       held in current_lambda (Bug #0000114).
  - (efuns.c) to_string(closure) leaked the closure (Bug #0000114).
  - (ed.c) The 'M' command leaked the regular expression (Bug #0000114).

19-Aug-2004 (Lars Duening)  (3.3.585)
  - (prolang.y, interpret.c, func_spec) Float variables without initializer
       are now properly initialized to float-0 instead of number-0 (reported
       by Bardioc).
  - (pkg-mccp.c) When ending a MCCP connection failed due to an error, the
       zlib datastructures weren't deallocated (Bug #0000111, fix by Alwin).

08-Aug-2004 (Lars Duening)  (3.3.584)
  - (simulate.c) When printing a load-object error with a long filename,
       the message is limited to the length of the error message buffer (Bug
       #0000109).
  - (simulate, xalloc.c) The length of the error message and error format
       buffer are now given by two macros, to facilitate easier adaptation
       of depending program segments.

01-Aug-2004 (Lars Duening)  (3.3.583)
  - (backend.c) If the garbage_collection() couldn't open a passed file,
       the filename was leaked (reported by xtian).
  - (mstrings.c) Corrected the statistics display for itabled strings.