@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+23-Aug-2004 (Lars Duening)  (3.3.589)
+  - (prolang.y) Removed a C99 construct which broke compilation on C90
+      compilers. I hope. (Bug #0000116).
+
 23-Aug-2004 (Lars Duening)  (3.3.588)
   - (array.c, pkg-mccp.c) Removed compiler warnings (thanks, Andre).
 
